@@ -410,9 +410,6 @@ void help_init(void)
 	if ((f->menus & currmenu) == 0)
 	    continue;
 
-	if (!f->desc || f->desc[0] == '\0')
-	    continue;
-
 	/* Let's simply show the first two shortcuts from the list. */
 	for (s = sclist, scsfound = 0; s != NULL; s = s->next) {
 
